--- a/kobuki_auto_docking/CMakeLists.txt
+++ b/kobuki_auto_docking/CMakeLists.txt
@@ -11,47 +11,43 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake_ros REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclpy REQUIRED)
-find_package(rclcpp_components REQUIRED)
-find_package(rclcpp_action REQUIRED)
-find_package(rcl_interfaces REQUIRED)
-
-find_package(kobuki_ros_interfaces REQUIRED)
-find_package(kobuki_core REQUIRED)
-
-find_package(message_filters REQUIRED)
-find_package(tf2_ros REQUIRED)
-
 find_package(ecl_geometry REQUIRED)
 find_package(ecl_linear_algebra REQUIRED)
-
+find_package(geometry_msgs REQUIRED)
+find_package(kobuki_core REQUIRED)
+find_package(kobuki_ros_interfaces REQUIRED)
+find_package(message_filters REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(rcl_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 ecl_enable_cxx14_compiler()
 ecl_enable_cxx_warnings()
 
-include_directories(include)
-
 add_library(kobuki_auto_docking src/auto_docking_ros.cpp)
-
-#target_include_directories(kobuki_auto_docking PUBLIC
-#  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-#  "$<INSTALL_INTERFACE:include>"
-#)
-
+target_include_directories(kobuki_auto_docking PUBLIC
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+  "$<INSTALL_INTERFACE:include>"
+)
 ament_target_dependencies(kobuki_auto_docking
-  "kobuki_ros_interfaces"
+  "geometry_msgs"
   "kobuki_core"
+  "kobuki_ros_interfaces"
+  "message_filters"
+  "nav_msgs"
+  "rcl_interfaces"
   "rclcpp"
   "rclcpp_components"
   "rclcpp_action"
-  "rcl_interfaces"
-  "message_filters"
-  "nav_msgs"
+  "std_msgs"
+  "tf2_geometry_msgs"
   "tf2_ros"
 )
-
 target_link_libraries(kobuki_auto_docking
   ecl_geometry::ecl_geometry
   ecl_linear_algebra::ecl_linear_algebra
